--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <base href="https://vanremo.github.io/Safely/"> 
     
     <title>Eletricista no Itaim Paulista | SAFELY Eletricista</title>
 
