--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="geo.region" content="BR-SP">
     <meta name="geo.placename" content="São Paulo e Região">
 
-    <link rel="stylesheet" href="./Assets/Css/style.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
