inclusão de imagens e vídeos

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <!-- Base para todos os caminhos relativos -->
-    <base href="https://vanremo23.github.io/Safely/">
-
+    
     <title>Eletricista no Itaim Paulista | SAFELY Eletricista</title>
 
     <meta name="description" content="Eletricista residencial e comercial no Itaim Paulista e São Paulo. Atendimento rápido, seguro e orçamento sem compromisso. SAFELY Eletricista.">
@@ -17,7 +15,7 @@
     <meta name="geo.region" content="BR-SP">
     <meta name="geo.placename" content="São Paulo e Região">
 
-    <link rel="stylesheet" href="./Assets/Css/style.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -159,6 +157,43 @@
     </div>
 
 </section> <!-- fecha section serviços -->
+
+<!-- DEPOIMENTOS-->
+
+<section class="depoimentos">
+    <h2>O que nossos clientes dizem</h2>
+
+    <div class="depoimentos-grid">
+
+        <div class="depoimento-box">
+            <div class="estrelas">⭐⭐⭐⭐⭐</div>
+            <p class="texto-depoimento">
+                “Serviço rápido, limpo e muito profissional. Recomendo a SAFELY de olhos fechados.”
+            </p>
+            <span class="autor-depoimento">
+                — Carlos M., Itaim Paulista
+            </span>
+        </div>
+
+        <div class="depoimento-box">
+            <div class="estrelas">⭐⭐⭐⭐⭐</div>
+            <p class="texto-depoimento">
+                “Atendimento excelente e preço justo. Resolveram meu problema no mesmo dia.”
+            </p>
+            <span class="autor-depoimento">
+                — Ana S., São Paulo
+            </span>
+        </div>
+
+    </div>
+
+    <!-- Botão de ação -->
+    <div class="depoimento-cta">
+        <a href="https://wa.me/5511992055870" target="_blank" class="btn-orcamento">
+            Solicitar Orçamento pelo WhatsApp
+        </a>
+    </div>
+</section>
 
 <section id="contato">
     <h2>Contato</h2>
