--- a/troca_fiacao.html
+++ b/troca_fiacao.html
@@ -1,106 +1,204 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Troca de Fiação</title>
-    <link rel="stylesheet" href="style.css"> <!-- seu CSS principal -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            background-color: #f9f9f9;
-        }
-        header {
-            background-color: #007acc;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2em;
-        }
-        main {
-            padding: 20px;
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        section {
-            margin-bottom: 40px;
-        }
-        section h2 {
-            color: #007acc;
-            margin-bottom: 15px;
-        }
-        .galeria {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-        }
-        .galeria img {
-            width: calc(50% - 15px);
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        video {
-            width: 100%;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        p {
-            margin-bottom: 15px;
-        }
-        a.back-link {
-            display: inline-block;
-            margin-top: 20px;
-            text-decoration: none;
-            color: #007acc;
-            font-weight: bold;
-        }
-        a.back-link:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
 
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        line-height: 1.6;
+        background-color: #f9f9f9;
+      }
+
+      header {
+        background-color: #007acc;
+        color: #fff;
+        padding: 20px 0;
+        text-align: center;
+      }
+
+      header h1 {
+        margin: 0;
+        font-size: 2em;
+      }
+
+      main {
+        padding: 20px;
+        max-width: 1000px;
+        margin: 0 auto;
+      }
+
+      section {
+        margin-bottom: 40px;
+      }
+
+      section h2 {
+        color: #007acc;
+        margin-bottom: 15px;
+      }
+
+      p {
+        margin-bottom: 15px;
+        color: #333;
+      }
+
+      /* ===== GALERIA ===== */
+      .galeria-servicos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 18px;
+      }
+
+      .galeria-servicos a {
+        display: block;
+      }
+
+      .galeria-servicos img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 16px;
+        box-shadow: 0 6px 14px rgba(0, 0, 0, 0.15);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      .galeria-servicos img:hover {
+        transform: scale(1.03);
+        box-shadow: 0 10px 22px rgba(0, 0, 0, 0.22);
+      }
+        .galeria-info {
+            font-style:normal;
+            color: #131212;
+            margin-top: 8px;
+        }
+
+
+        
+
+      /* ===== VÍDEO ===== */
+      video {
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+        border-radius: 30px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
+      }
+
+      /* ===== LINK VOLTAR ===== */
+      .back-link {
+        display: inline-block;
+        margin-top: 20px;
+        text-decoration: none;
+        color: #007acc;
+        font-weight: bold;
+      }
+
+      .back-link:hover {
+        text-decoration: underline;
+      }
+
+      /* ===== RESPONSIVO ===== */
+      @media (max-width: 768px) {
+        .galeria-servicos {
+          grid-template-columns: 1fr;
+        }
+
+        .galeria-servicos img {
+          height: 180px;
+        }
+      }
+
+      @media (min-width: 1100px) {
+        .galeria-servicos {
+          grid-template-columns: repeat(3, 1fr);
+        }
+      }
+    </style>
+  </head>
+
+  <body>
     <header>
-        <h1>Troca de Fiação</h1>
+      <h1>Troca de Fiação</h1>
     </header>
 
     <main>
-        <!-- Descrição do serviço -->
-        <section>
-            <h2>Sobre o Serviço</h2>
-            <p>Realizamos a substituição de fiação antiga, disjuntores e quadros elétricos, garantindo que sua instalação elétrica esteja segura e em conformidade com as normas técnicas. Evite riscos e problemas futuros com uma rede elétrica atualizada.</p>
-        </section>
+      <!-- SOBRE O SERVIÇO -->
+      <section>
+        <h2>Sobre o Serviço</h2>
+        <p>
+          Realizamos a substituição de fiação antiga, disjuntores e quadros
+          elétricos, garantindo segurança, eficiência e conformidade com as
+          normas técnicas vigentes.
+        </p>
+      </section>
 
-        <!-- Galeria de imagens -->
-        <section>
-            <h2>Galeria de Imagens</h2>
-            <div class="galeria">
-                <img src="imagem_fiacao1.jpg" alt="Troca de fiação 1">
-                <img src="imagem_fiacao2.jpg" alt="Troca de fiação 2">
-                <img src="imagem_fiacao3.jpg" alt="Troca de fiação 3">
-                <img src="imagem_fiacao4.jpg" alt="Troca de fiação 4">
-            </div>
-        </section>
+      <!-- GALERIA -->
+      <section>
+        <h2>Galeria de Imagens</h2>
 
-        <!-- Vídeos do serviço -->
-        <section>
-            <h2>Vídeo Demonstrativo</h2>
-            <video controls>
-                <source src="video_fiacao.mp4" type="video/mp4">
-                Seu navegador não suporta a reprodução de vídeo.
-            </video>
-        </section>
+        <div class="galeria-servicos">
+          <a href="Assets/img/Troca_de_fiacao/fiacao1.jpeg" target="_blank">
+            <img
+              src="Assets/img/Troca_de_fiacao/fiacao1.jpeg"
+              alt="Troca de fiação 1"
+            />
+          </a>
 
-        <!-- Link para voltar -->
-        <a href="index.html" class="back-link">← Voltar para os serviços</a>
+          <a href="Assets/img/Troca_de_fiacao/fiacao2.jpeg" target="_blank">
+            <img
+              src="Assets/img/Troca_de_fiacao/fiacao2.jpeg"
+              alt="Troca de fiação 2"
+            />
+          </a>
+
+          <a href="Assets/img/Troca_de_fiacao/fiacao3.jpeg" target="_blank">
+            <img
+              src="Assets/img/Troca_de_fiacao/fiacao3.jpeg"
+              alt="Troca de fiação 3"
+            />
+          </a>
+
+          <a href="Assets/img/Troca_de_fiacao/fiacao4.jpeg" target="_blank">
+            <img
+              src="Assets/img/Troca_de_fiacao/fiacao4.jpeg"
+              alt="Troca de fiação 4"
+            />
+          </a>
+
+          <a href="Assets/img/Troca_de_fiacao/fiacao5.jpeg" target="_blank">
+            <img
+              src="Assets/img/Troca_de_fiacao/fiacao5.jpeg"
+              alt="Troca de fiação 5"
+            />
+          </a>
+
+          <a href="Assets/img/Troca_de_fiacao/fiacao6.jpeg" target="_blank">
+            <img
+              src="Assets/img/Troca_de_fiacao/fiacao6.jpeg"
+              alt="Troca de fiação 6"
+            />
+          </a>
+        </div>
+
+        <!-- TEXTO DE APOIO -->
+        <p class="galeria-info">Clique nas imagens para ampliar 🔍</p>
+      </section>
+
+      <!-- VÍDEO -->
+      <section>
+        <h2>Vídeo Demonstrativo</h2>
+        <video controls>
+          <source src="./Assets/videos/video_fiacao1.mp4" type="video/mp4" />
+          Seu navegador não suporta a reprodução de vídeo.
+        </video>
+      </section>
+      <!-- Link para voltar -->
+
+      <a href="index.html" class="back-link">← Voltar para os serviços</a>
     </main>
-
-</body>
+  </body>
 </html>
