Fix video source path in troca_fiacao.html
Updated video source path in troca_fiacao.html.

--- a/troca_fiacao.html
+++ b/troca_fiacao.html
@@ -192,7 +192,7 @@
       <section>
         <h2>Vídeo Demonstrativo</h2>
         <video controls>
-          <source src="./Assets/videos/video_fiacao1.mp4" type="video/mp4" />
+          <source src=" " type="video/mp4" />
           Seu navegador não suporta a reprodução de vídeo.
         </video>
       </section>
